Added a logout button

--- a/stacksy/app/views/layouts/application.html.haml
+++ b/stacksy/app/views/layouts/application.html.haml
@@ -10,4 +10,6 @@
       = notice
     %p.alert
       = alert
+    .login_logout
+      = link_to "Log Out", destroy_user_session_path, method: :delete
     = yield
