--- a/stacksy/app/views/users/index.html.haml
+++ b/stacksy/app/views/users/index.html.haml
@@ -12,13 +12,13 @@
     News Feed
   #right_sidebar
     %nav
-      .profile_sidebar_section
-      = link_to 'Home', root_path
-      = link_to 'Search', user_search_path
-      = link_to 'Messages', user_messages_path
-      = link_to 'Pings', user_pings_path
-      = link_to 'Favorites', user_favorites_path
-      = link_to 'Blocks', user_blocks_path
+      / .profile_sidebar_section
+      / = link_to 'Home', root_path
+      / = link_to 'Search', user_search_path
+      / = link_to 'Messages', user_messages_path
+      / = link_to 'Pings', user_pings_path
+      / = link_to 'Favorites', user_favorites_path
+      / = link_to 'Blocks', user_blocks_path
       
     .popular tags
 
