--- a/stacksy/app/views/users/index.html.haml
+++ b/stacksy/app/views/users/index.html.haml
@@ -1,12 +1,12 @@
-ADMIN INDEX
+Admin Index
 
 !!! 5
 %head
-  %title Stackly
+  %title Stacksy
 
 %body
   %header
-    %h1 Stackly
+    %h1 Stacksy
 
   #left_sidebar
     Left Sidebar
