Added all users to home newsfeed

--- a/stacksy/app/views/layouts/application.html.haml
+++ b/stacksy/app/views/layouts/application.html.haml
@@ -12,6 +12,13 @@
       = alert
 
     -if current_user
+      #left_sidebar
+        #left_sidebar_container
+          = image_tag("/assets/copy_logo.png", width: "100px") 
+          #logo_attribution 
+            Creative Commons – Attribution (CC BY 3.0) 
+            Copy designed by Garrett Knoll from the Noun Project
+
       #right_sidebar
         %nav
           .profile_sidebar_section
