Redirected to a different page if user is new

--- a/stacksy/app/views/users/home.html.haml
+++ b/stacksy/app/views/users/home.html.haml
@@ -13,9 +13,10 @@ User Home Page
       -@users.each do |user|
         / #user_image
         = user.name
-        = user.gender
+        = user.gender.title
         = user.location
         / = user.age
+        %br
 
   
 
