--- a/stacksy/app/views/layouts/application.html.haml
+++ b/stacksy/app/views/layouts/application.html.haml
@@ -6,39 +6,37 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
-    %p.notice
-      = notice
-    %p.alert
-      = alert
+    .container
+      %p.notice
+        = notice
+      %p.alert
+        = alert
 
-    -if current_user
-      #left_sidebar
-        #left_sidebar_container
-          = image_tag("/assets/copy_logo.png", width: "100px") 
-          #logo_attribution 
-            Creative Commons – Attribution (CC BY 3.0) 
-            Copy designed by Garrett Knoll from the Noun Project
+      -if current_user
+        #left_sidebar
+          #left_sidebar_container
+            = image_tag("/assets/copy_logo.png", width: "100px") 
+            #logo_attribution 
+              Creative Commons – Attribution (CC BY 3.0) 
+              Copy designed by Garrett Knoll from the Noun Project
 
-      #right_sidebar
-        %nav
-          .profile_sidebar_section
-            =current_user.name
-          .login_logout
-            = link_to "Log Out", destroy_user_session_path, method: :delete
-          %ul
-            %li#menu_item_search 
-              = link_to 'Home', home_page_based_on_role
-            %li#menu_item_messages 
-              = link_to 'Messages', user_messages_path(current_user)
-            %li#menu_item_pings 
-              = link_to 'Pings', user_pings_path(current_user)
-            %li#menu_item_favorites 
-              = link_to 'Favorites', user_favorites_path(current_user)
-            %li#menu_item_blocks 
-              = link_to 'Blocks', user_blocks_path(current_user)
+        #right_sidebar
+          %nav
+            .profile_sidebar_section
+              =current_user.name
+            .login_logout
+              = link_to "Log Out", destroy_user_session_path, method: :delete
+            %ul
+              %li#menu_item_search 
+                = link_to 'Home', home_page_based_on_role
+              %li#menu_item_messages 
+                = link_to 'Messages', user_messages_path(current_user)
+              %li#menu_item_pings 
+                = link_to 'Pings', user_pings_path(current_user)
+              %li#menu_item_favorites 
+                = link_to 'Favorites', user_favorites_path(current_user)
+              %li#menu_item_blocks 
+                = link_to 'Blocks', user_blocks_path(current_user)
 
-    
 
-   
-
-    = yield
+      = yield
