--- a/stacksy/app/assets/stylesheets/styles.css.scss
+++ b/stacksy/app/assets/stylesheets/styles.css.scss
@@ -1,63 +1,63 @@
 @import 'bootstrap';
 
-body{
-  text-align: center;  
-}
-
-header{
-  margin-left:auto;
-  margin-right: auto;
-}
-
-#left_sidebar{
-  float: left;
+html, body {
   height: 100%;
-  
 }
 
-#left_sidebar_container{
-  position:fixed;
-  height: 100%;
-  border-right: 1px black solid; 
-  width: 180px;
-  top: 0;
-  left: 0;
-}
-
-#logo_attribution{
-   vertical-align : bottom;
-   font-size: 0.5em;
-   font-weight: bold;
-}
-  
-
-#right_sidebar{
-  float: right;
-  height: 100%; 
-}
-
-#right_sidebar nav{
-  position: fixed;
-  height: 100%;
-  border-left: 1px black solid;
-  width: 180px;
-  top: 0;
-  right: 0;
-}
-
-nav ul{
-  list-style: none;
-  display: block;
-}
-
-nav ul li{
+.btn {
   text-align: left;
 }
 
-nav ul li a{
-  text-decoration: none;
+.btn-butter {
+  background-color: #FFFF77;
+  color: #4073FF;
 }
 
-nav ul li:hover{
-  background-color: red;
+.container-fluid, .row, .col-md-2, .col-md-8 {
+  height: 100%;
 }
+
+.col-md-2, .col-md-8 {
+  padding-top: 30px;
+}
+
+.col-md-2 {
+  background-color: #C2DDFF;
+}
+
+header{
+  margin-bottom: 50px;
+}
+
+h1 {
+  font-size: 100px;
+  font-family: 'Pacifico', cursive;
+  /*font-family: 'Lobster', cursive;*/
+  /*font-family: 'Lobster Two', cursive;*/
+  color: #FF6000;
+}
+
+h3 {
+  color: #4073FF;
+}
+
+.col-md-8 {
+  text-align: center;
+  background-color: #DFF8EE;
+}
+
+.col-md-2 p {
+
+  margin-top: 300px;
+}
+
+svg {
+  fill: #AF6200;
+}
+
+.special {
+  font-family: 'Libre Baskerville', serif;
+}
+
+
+
