Add javascript click function to send message buttons.  Successfully printing submitted to console.

--- a/stacksy/app/views/users/home.html.haml
+++ b/stacksy/app/views/users/home.html.haml
@@ -5,15 +5,15 @@
     = user.gender.title
     = user.location
     / = user.age
-    #message
-      #message-button Message
-      #message-box
-        = form_tag create_message_path(recipient_id: user.id) do
+    .message
+      .message-button.btn.btn-success Message
+      .message-box
+        = form_tag create_message_path(recipient_id: user.id), id: 'message-content-' + user.id.to_s, remote: true do
           = fields_for :message do |i|
             %br
             = i.text_area :content, cols: '50', rows: '5'
           %br
-          = submit_tag "Send", class: 'btn btn-success'
+          = submit_tag "Send", class: 'send-button btn btn-success'
 
     %br
 
