Fix javascript message form.

--- a/stacksy/app/assets/stylesheets/styles.css.scss
+++ b/stacksy/app/assets/stylesheets/styles.css.scss
@@ -29,6 +29,11 @@ header{
   margin-bottom: 50px;
 }
 
+#js-alert {
+  margin-top: 20px;
+  margin-bottom: 50px;
+}
+
 h1 {
   font-size: 100px;
   font-family: 'Pacifico', cursive;
