--- a/stacksy/app/views/layouts/application.html.haml
+++ b/stacksy/app/views/layouts/application.html.haml
@@ -25,6 +25,7 @@
             = notice
           %p.alert
             = alert
+          #js-alert Blert
           = yield
         .col-md-2
           -if current_user
