Add fade out for javascript sent alert, add validation for presence of message content.

--- a/stacksy/app/views/layouts/application.html.haml
+++ b/stacksy/app/views/layouts/application.html.haml
@@ -25,7 +25,7 @@
             = notice
           %p.alert
             = alert
-          #js-alert Blert
+          #js-alert
           = yield
         .col-md-2
           -if current_user
