--- a/stacksy/app/views/messages/create.js.haml
+++ b/stacksy/app/views/messages/create.js.haml
@@ -1,7 +1,7 @@
 - if @message.persisted?
   var alertHtml = "Message sent to #{escape_javascript(@message.recipient.name)}. Sweet!"
 - else
-  var alertHtml = "Message not sent. #{escape_javascript(@message.errors.full_messages.join(", "))}. Not sweet. Please try again--love waits for no person!"
+  var alertHtml = "Message not sent. #{escape_javascript(@message.errors.full_messages.join(", "))}. Not sweet.<br>Please try again--love waits for no person!"
 
-$('#js-alert').html(alertHtml).delay(2000).fadeOut("slow");
+$('#js-alert').addClass('highlight').html(alertHtml).delay(3000).fadeOut("slow", function() { $('#js-alert').html("").css('display', 'block'); });
 $('.sent-message').slideUp(1000);
