--- a/stacksy/app/views/layouts/application.html.haml
+++ b/stacksy/app/views/layouts/application.html.haml
@@ -31,7 +31,7 @@
             %ul.nav.nav-pills.nav-stacked
               %li
                 %h3
-                  = current_user.name
+                  = link_to current_user.name, current_user
               %li.login_logout
                 = link_to "Log Out", destroy_user_session_path, method: :delete, class: 'btn btn-butter'
               %li#menu_item_home
