--- a/stacksy/app/assets/stylesheets/styles.css.scss
+++ b/stacksy/app/assets/stylesheets/styles.css.scss
@@ -34,6 +34,12 @@ header{
   margin-bottom: 50px;
 }
 
+#js-alert.hightlight {
+  background-color: red;
+  font-family: 'Pacifico', cursive; 
+}
+
+
 h1 {
   font-size: 100px;
   font-family: 'Pacifico', cursive;
@@ -62,10 +68,6 @@ svg {
   font-family: 'Libre Baskerville', serif;
 }
 
-.hightlight {
-  background-color: red;
-  font-family: 'Pacifico', cursive; 
-}
 
 
 
