--- a/stacksy/app/views/messages/create.js.haml
+++ b/stacksy/app/views/messages/create.js.haml
@@ -4,4 +4,4 @@
   var alertHtml = "Message not sent. #{escape_javascript(@message.errors.full_messages.join(", "))}. Not sweet.<br>Please try again--love waits for no person!"
 
 $('#js-alert').addClass('highlight').html(alertHtml).delay(3000).fadeOut("slow", function() { $('#js-alert').html("").css('display', 'block'); });
-$('.sent-message').slideUp(1000);
+$('.sent-message').slideUp(1000, function(){ $(this).removeClass('sent-message'); });
