--- a/stacksy/app/assets/stylesheets/styles.css.scss
+++ b/stacksy/app/assets/stylesheets/styles.css.scss
@@ -17,11 +17,11 @@ html, body {
   height: 100%;
 }
 
-.col-md-2, .col-md-8 {
+body > .container-fluid > .row > .col-md-2, body > .container-fluid > .row > .col-md-8 {
   padding-top: 30px;
 }
 
-.col-md-2 {
+body > .container-fluid > .row > .col-md-2 {
   background-color: #C2DDFF;
 }
 
@@ -66,6 +66,14 @@ svg {
 
 .special {
   font-family: 'Libre Baskerville', serif;
+}
+
+table {
+  text-align: left;
+}
+
+.col-md-8.col-md-2 {
+  background-color: red;
 }
 
 
