Fix typo in user profile controller/action shorthand, add links to sender and recipient names in messages table.

--- a/stacksy/app/views/messages/index.html.haml
+++ b/stacksy/app/views/messages/index.html.haml
@@ -12,10 +12,10 @@
       - @messages.each do |message|
         %tr
           %td 
-            = link_to message.sender.name, user
+            = link_to message.sender.name, profile_path(message.sender)
           %td 
-            = message.recipient.name
+            = link_to message.recipient.name, profile_path(message.recipient)
           %td 
             = message.content
           %td
-            = reply
+            reply
