--- a/stacksy/app/assets/stylesheets/styles.css.scss
+++ b/stacksy/app/assets/stylesheets/styles.css.scss
@@ -39,6 +39,24 @@ header{
   font-family: 'Pacifico', cursive; 
 }
 
+a:hover#facebook_log_in_button{
+  cursor: pointer;
+  text-decoration: none;
+}
+
+#facebook_log_in_button{
+  border: 2px solid #FF6000;
+  background-color: #FF6000;
+  color: white;
+  border-radius: 3px;
+  padding: 15px 130px;
+  margin: 44px 0;
+  display: inline-block;
+  transition: background-color 0.6s, box-shadow 0.6s, text-shadow 0.6s;
+  font-size: 25px;
+}
+
+
 
 h1 {
   font-size: 100px;
