--- a/stacksy/app/views/layouts/application.html.haml
+++ b/stacksy/app/views/layouts/application.html.haml
@@ -8,6 +8,15 @@
     = javascript_include_tag "application"
     = csrf_meta_tags
   %body
+    #fb-root
+      :javascript
+        (function(d, s, id) {
+          var js, fjs = d.getElementsByTagName(s)[0];
+          if (d.getElementById(id)) return;
+          js = d.createElement(s); js.id = id;
+          js.src = "//connect.facebook.net/en_US/sdk.js#xfbml=1&appId=248578952014298&version=v2.0";
+          fjs.parentNode.insertBefore(js, fjs);
+        }(document, 'script', 'facebook-jssdk'));
     .container-fluid
       .row
         .col-md-2
@@ -32,6 +41,8 @@
             %ul.nav.nav-pills.nav-stacked
               %li
                 %h3
+                  = image_tag current_user.profile.image_1
+                  %br
                   = link_to current_user.name, current_user
               %li.login_logout
                 = link_to "Log Out", destroy_user_session_path, method: :delete, class: 'btn btn-butter'
