Added some basic information to the profile

--- a/stacksy/app/views/layouts/application.html.haml
+++ b/stacksy/app/views/layouts/application.html.haml
@@ -40,7 +40,7 @@
             %ul.nav.nav-pills.nav-stacked
               %li
                 %h3
-                  = link_to image_tag(current_user.profile.image_1, :class => "circular"), current_user
+                  = link_to image_tag(current_user.profile.image_1, :class => "circular_large"), current_user
                   %br
                   = link_to current_user.name, current_user
               %li.login_logout
