--- a/stacksy/app/assets/stylesheets/styles.css.scss
+++ b/stacksy/app/assets/stylesheets/styles.css.scss
@@ -56,13 +56,20 @@ a:hover#facebook_log_in_button{
   font-size: 25px;
 }
 
-.circular{
+.circular_large{
   width: 180px;
   height: 180px;
   border-radius: 90px;
   -webkit-border-radius: 90px;
   -moz-border-radius: 90px;
+}
 
+.circular_small{
+  width: 100px;
+  height: 100px;
+  border-radius: 50px;
+  -webkit-border-radius: 50px;
+  -moz-border-radius: 50px;
 }
 
 h1 {
