--- a/stacksy/app/views/users/home.html.haml
+++ b/stacksy/app/views/users/home.html.haml
@@ -1,6 +1,6 @@
 #news_feed
   -@users.each do |user|
-    = image_tag user.profile.image_1
+    = image_tag user.profile.image_1, :class => "circular_small"
     = user.name
     = user.gender.title
     = user.location
