--- a/stacksy/app/views/users/show.html.haml
+++ b/stacksy/app/views/users/show.html.haml
@@ -1,1 +1,12 @@
-User Show
+.profile_image
+  =image_tag @user.profile.image_1
+
+%h2=@user.name
+
+.basic_info
+  =@user.location 
+  %br
+  =@user.gender.title 
+  %br
+  =@user.age 
+  %br
