--- a/stacksy/app/views/messages/index.html.haml
+++ b/stacksy/app/views/messages/index.html.haml
@@ -10,29 +10,5 @@
         %th.col-md-4 Message
         %th.col-md-2 Action
     %tbody
-      - @messages.each do |message|
-        - if message.recipient.id == current_user.id
-          %tr.info
-            %td.info
-              = link_to message.sender.name, profile_path(message.sender)
-            %td.info
-              = link_to message.recipient.name, profile_path(message.recipient)
-            %td.info
-              = message.date
-            %td.info
-              = message.content
-            %td.info
-              reply
-        - else
-          %tr
-            %td
-              = link_to message.sender.name, profile_path(message.sender)
-            %td
-              = link_to message.recipient.name, profile_path(message.recipient)
-            %td
-              = message.date
-            %td
-              = message.content
-            %td
-              reply
+      = render 'table_body'
         
