--- a/stacksy/app/views/messages/_table_body.html.haml
+++ b/stacksy/app/views/messages/_table_body.html.haml
@@ -1,16 +1,29 @@
 - @messages.each do |message|
   - if message.recipient.id == current_user.id
-    %tr.info
-      %td.info
-        = link_to message.sender.name, profile_path(message.sender)
-      %td.info
-        = link_to message.recipient.name, profile_path(message.recipient)
-      %td.info
-        = message.date
-      %td.info
-        = message.content
-      %td.info
-        reply
+    - if message.new_since_last_login?(current_user)
+      %tr.warning
+        %td.warning
+          = link_to message.sender.name, profile_path(message.sender)
+        %td.warning
+          = link_to message.recipient.name, profile_path(message.recipient)
+        %td.warning
+          = message.date
+        %td.warning
+          = message.content
+        %td.warning
+          reply
+    - else
+      %tr.info
+        %td.info
+          = link_to message.sender.name, profile_path(message.sender)
+        %td.info
+          = link_to message.recipient.name, profile_path(message.recipient)
+        %td.info
+          = message.date
+        %td.info
+          = message.content
+        %td.info
+          reply
   - else
     %tr
       %td
@@ -23,3 +36,19 @@
         = message.content
       %td
         reply
+
+
+
+
+  / - else
+  /   %tr
+  /     %td
+  /       = link_to message.sender.name, profile_path(message.sender)
+  /     %td
+  /       = link_to message.recipient.name, profile_path(message.recipient)
+  /     %td
+  /       = message.date
+  /     %td
+  /       = message.content
+  /     %td
+  /       reply
