Revised new_since_last_login method to use the complete date info in the database, rather than converting to just dates, so as to more precisely capture new messages.

--- a/stacksy/app/views/messages/_table_body.html.haml
+++ b/stacksy/app/views/messages/_table_body.html.haml
@@ -1,5 +1,5 @@
 - @messages.each do |message|
-  - if message.recipient.id == current_user.id
+  - if message.recipient == current_user
     - if message.new_since_last_login?(current_user)
       %tr.warning
         %td.warning
