--- a/stacksy/app/assets/stylesheets/styles.css.scss
+++ b/stacksy/app/assets/stylesheets/styles.css.scss
@@ -4,6 +4,19 @@ html, body {
   height: 100%;
 }
 
+#sign_in_content{
+  /*background-image:url("pancakesyrup.jpg");
+  background-repeat: no-repeat;
+  background-position: center 100px;
+  background-size: 100% auto;*/
+}
+
+#sign_in_subtitle{
+  font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+  margin-bottom: 0px;
+  margin-top: 40px;
+}
+
 .btn {
   text-align: left;
 }
@@ -15,6 +28,7 @@ html, body {
 
 .container-fluid, .row, .col-md-2, .col-md-8 {
   height: 100%;
+  width: 100%;
 }
 
 .col-md-2, .col-md-8 {
@@ -73,9 +87,10 @@ a:hover#facebook_log_in_button{
 }
 
 h1 {
-  font-size: 100px;
+  font-size: 150px;
   font-family: 'Pacifico', cursive;
   color: #FF6000;
+  
 }
 
 h3 {
@@ -89,7 +104,6 @@ h3 {
 }
 
 .col-md-2 p {
-
   margin-top: 300px;
 }
 
