--- a/stacksy/app/assets/stylesheets/styles.css.scss
+++ b/stacksy/app/assets/stylesheets/styles.css.scss
@@ -28,7 +28,7 @@ html, body {
 
 .container-fluid, .row, .col-md-2, .col-md-8 {
   height: 100%;
-  width: 100%;
+  //width: 100%;
 }
 
 body > .container-fluid > .row > .col-md-2, body > .container-fluid > .row > .col-md-8 {
