--- a/stacksy/app/views/layouts/application.html.haml
+++ b/stacksy/app/views/layouts/application.html.haml
@@ -43,9 +43,10 @@
             %ul.nav.nav-pills.nav-stacked
               %li
                 %h3
-                  = link_to image_tag(current_user.profile.image_1, :class => "circular_large"), current_user
+                  = link_to image_tag(current_user.profile.image_1), profile_path(current_user)
+
                   %br
-                  = link_to current_user.name, current_user
+                  = link_to current_user.name, profile_path(current_user)
               %li.login_logout
                 = link_to "Log Out", destroy_user_session_path, method: :delete, class: 'btn btn-butter'
               %li#menu_item_home
