--- a/stacksy/app/views/profiles/show.html.haml
+++ b/stacksy/app/views/profiles/show.html.haml
@@ -1,1 +1,15 @@
-Show Profile
+
+Profile Show
+
+.profile_image
+  =image_tag @user.profile.image_1
+
+%h2=@user.name
+
+.basic_info
+  =@user.location 
+  %br
+  =@user.gender.title 
+  %br
+  =@user.age 
+  %br
