Enabled different membership options.

--- a/stacksy/app/views/layouts/application.html.haml
+++ b/stacksy/app/views/layouts/application.html.haml
@@ -44,11 +44,13 @@
               %li
                 %h3
                   = link_to image_tag(current_user.profile.image_1), profile_path(current_user)
-
                   %br
                   = link_to current_user.name, profile_path(current_user)
-              %li.login_logout
-                = link_to "Log Out", destroy_user_session_path, method: :delete, class: 'btn btn-butter'
+                  %br
+                  = link_to "Membership", user_membership_path(current_user)
+                  %br
+                  = link_to "Log Out", destroy_user_session_path, method: :delete, class: 'btn btn-butter'
+
               %li#menu_item_home
                 = link_to 'Home', home_page_based_on_role, class: '.btn btn-butter'
               %li#menu_item_search
