--- a/stacksy/app/views/tracks/tracker_index.html.haml
+++ b/stacksy/app/views/tracks/tracker_index.html.haml
@@ -1,6 +1,3 @@
 %h2 Tracker
 %h3 Who you lookin' at.
-- @sent_tracks.each do |sent_track|
-  - tracker = sent_track.tracker
-  = image_tag(tracker.profile.image_1)
-  = link_to tracker.name, profile_path(tracker)
+= render partial: 'tracks', locals: {tracks: @sent_tracks}
