--- a/stacksy/app/views/users/home.html.haml
+++ b/stacksy/app/views/users/home.html.haml
@@ -1,6 +1,6 @@
 #news_feed
   -@users.each do |user|
-    = link_to image_tag(user.profile.image_1), profile_path(user), :class => "circular_small"
+    = link_to image_tag(user.profile.image_1, class: "circular_small"), profile_path(user)
     = link_to user.name, profile_path(user)
     = user.gender.title
     = user.location
