Fix error in tracks partial for providing gender information.

--- a/stacksy/app/views/tracks/_tracks.html.haml
+++ b/stacksy/app/views/tracks/_tracks.html.haml
@@ -4,7 +4,7 @@
   %br
   %p
     #{track.tracker.age}, 
-    - if track.tracker.gender == 5
+    - if track.tracker.gender_id == 5
       #{track.tracker.profile.other.capitalize}
     - else
       #{track.tracker.gender.title.capitalize}
