Adjust styling of slogan on login page.

--- a/stacksy/app/assets/stylesheets/styles.css.scss
+++ b/stacksy/app/assets/stylesheets/styles.css.scss
@@ -103,16 +103,12 @@ h3 {
   color: #4073FF;
 }
 
-.jq-syntax-special {
+.jq-syntax-char {
   color: #4073FF;
 }
 
-.jq-syntax-id {
-  
-}
-
-.jq-syntax-function {
-  color: #C2DDFF;
+.jq-syntax {
+  color: #FF0D70;
 }
 
 .col-md-8 {
