Add reply and delete buttons to message index.

--- a/stacksy/app/views/messages/_table_body.html.haml
+++ b/stacksy/app/views/messages/_table_body.html.haml
@@ -9,5 +9,13 @@
       = message.date
     %td{class: classname}
       = message.content
+      / .message-box
+      /   = form_tag create_message_path(recipient_id: user.id), id: 'message-content-' + user.id.to_s, remote: true do
+      /     = fields_for :message do |i|
+      /       %br
+      /       = i.text_area :content, cols: '50', rows: '5'
+      /     %br
+      /     = submit_tag "Send", class: 'send-button btn btn-success'
     %td{class: classname}
-      reply
+      .reply-button.btn.btn-success Reply       
+      .btn.btn-info Delete
