--- a/stacksy/app/views/tracks/_tracks.html.haml
+++ b/stacksy/app/views/tracks/_tracks.html.haml
@@ -7,4 +7,4 @@
     - if track.tracker.gender_id == 5
       #{track.tracker.profile.other.capitalize}
     - else
-      #{track.tracker.gender.title.capitalize}
+      #{track.tracker.other.capitalize}
