Add javascript message form to messages index.

--- a/stacksy/app/views/users/home.html.haml
+++ b/stacksy/app/views/users/home.html.haml
@@ -4,7 +4,7 @@
     = link_to user.name, profile_path(user)
     = user.gender.title
     = user.location
-    / = user.age
+    = user.age
     .message
       .message-button.btn.btn-success Message
       .message-box
