--- a/stacksy/app/views/messages/_reply.html.haml
+++ b/stacksy/app/views/messages/_reply.html.haml
@@ -1,6 +1,7 @@
-= form_tag create_message_path(recipient_id: recipient.id), remote: true do
-  = fields_for :message do |i|
+.message-box
+  = form_tag create_message_path(recipient_id: recipient.id), remote: true do
+    = fields_for :message do |i|
+      %br
+      = i.text_area :content, cols: '40', rows: '5'
     %br
-    = i.text_area :content, cols: '50', rows: '5'
-  %br
-  = submit_tag "Send", class: 'send-button btn btn-success'
+    = submit_tag "Send", class: 'send-button btn btn-success'
