--- a/stacksy/app/views/messages/_table_body.html.haml
+++ b/stacksy/app/views/messages/_table_body.html.haml
@@ -9,8 +9,10 @@
       = message.date
     %td{class: classname}
       = message.content
-      .message-box
-        - message.set_recipient_and_render_reply_partial(current_user)
+      - if message.recipient_is_current_user?(current_user)
+        = render partial: 'reply', locals: {recipient: message.sender}
+      - else
+        = render partial: 'reply', locals: {recipient: message.recipient}
     %td{class: classname}
       .reply-button.btn.btn-success Reply       
       .btn.btn-info Delete
