Move table_body partial into message partial, fix auto-updating of messages list.

--- a/stacksy/app/views/messages/index.html.haml
+++ b/stacksy/app/views/messages/index.html.haml
@@ -10,5 +10,5 @@
         %th.col-md-4 Message
         %th.col-md-2 Action
     %tbody
-      = render 'table_body'
+      = render @messages
         
