Move application.js functions into a setup variable and call that in the create.js.haml file to refresh the js after the ajax call.

--- a/stacksy/app/views/messages/create.js.haml
+++ b/stacksy/app/views/messages/create.js.haml
@@ -9,4 +9,4 @@ $('.sent-message').slideUp(1000, function(){ $(this).removeClass('sent-message')
 
 $('tbody').prepend(tbodyHtml);
 $('textarea').val("");
-
+StacksyApp.setup();
