--- a/stacksy/app/views/users/interests.html.haml
+++ b/stacksy/app/views/users/interests.html.haml
@@ -1,7 +1,19 @@
 .interests_sign_up
-  %p Who are you looking for?
-  = form_for @user do |f|
-    - Gender.all.each do |gender|
-      = check_box_tag :gender_interest_ids, gender.id, @user.gender_interest_ids.include?(gender.id)
-      = label_tag gender.title
+
+
+  
+  = form_for @user, url: {action: "update"} do |f|
+    %p What gender are you?
+    -Gender.all.each do |gender|
+      = f.radio_button :gender_id, gender.id
+      = f.label gender.title 
+    %br
+    / %p Who are you looking for?
+    / - Gender.all.each do |gender|
+    /   = f.check_box :gender_interested_in, gender.id, @user.gender_interest_ids.include?(gender.id)
+    /   = f.label gender.title
+    / %br
+    %p Zip Code
+    = f.text_field :zipcode
+    %br
     = f.submit
