Adjust javascript animations for messaging. Still not functioning properly.

--- a/stacksy/app/views/messages/create.js.haml
+++ b/stacksy/app/views/messages/create.js.haml
@@ -6,8 +6,8 @@
 
 
 $('#js-alert').html(alertHtml).delay(3000).fadeOut("slow", function() { $('#js-alert').html("").css('display', 'block'); });
-$('.sent-message').slideUp(1000, function(){ $(this).removeClass('sent-message'); });
+
 
 $('tbody').prepend(tbodyHtml);
 $('textarea').val("");
-StacksyApp.setup();
+//StacksyApp.setup();
