Fix javascript animations for messaging.

--- a/stacksy/app/views/messages/_message.html.haml
+++ b/stacksy/app/views/messages/_message.html.haml
@@ -13,5 +13,5 @@
     - else
       = render partial: 'reply', locals: {recipient: message.recipient}
   %td{class: classname}
-    .reply-button.btn.btn-success Reply       
+    .message-button.btn.btn-success Reply       
     = link_to "Delete", delete_message_path(current_user, message), method: :delete, class: "btn btn-info"
