Deleted ping-box div around ping for, uncommented js for alert so that ping message pops up.

--- a/stacksy/app/views/pings/create.js.haml
+++ b/stacksy/app/views/pings/create.js.haml
@@ -3,5 +3,5 @@
 - else
   var alertHtml = "Ping not sent. #{escape_javascript(@ping.errors.full_messages.join(", "))}. Not sweet.<br>Please try again--love waits for no person!"
 
-/ $('#js-alert').addClass('highlight').html(alertHtml).delay(3000).fadeOut("slow", function() { $('#js-alert').html("").css('display', 'block'); });
+$('#js-alert').html(alertHtml).delay(3000).fadeOut("slow", function() { $('#js-alert').html("").css('display', 'block'); });
 / $('.sent-message').slideUp(1000, function(){ $(this).removeClass('sent-message'); });
